Update subscription tests